Resolve build errors