@@ -24,6 +24,7 @@ compileJava.options.compilerArgs += [
     '--add-exports', 'jogl.all/com.jogamp.nativewindow=jcef',
     '--add-exports', 'jogl.all/com.jogamp.opengl.awt=jcef',
     '--add-exports', 'jogl.all/com.jogamp.opengl=jcef',
+    '--add-exports', 'jogl.all/com.jogamp.opengl.util=jcef',
     '--add-exports', 'java.desktop/sun.awt=jcef',
     '--add-exports', 'java.desktop/java.awt.peer=jcef',
     '--add-exports', 'java.desktop/sun.lwawt.macosx=jcef',
